# hip_examples

./: .gitmodules  CMakeLists.txt  README.md
eigen/.hg/: branch  dirstate  undo.desc  undo.dirstate
eigen/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-visible
eigen/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache
eigen/.hg/store/data/_eigen/: _core.i
eigen/.hg/store/data/_eigen/src/_core/: _array.h.i  _core_evaluators.h.i  _cwise_nullary_op.h.i  _dense_base.h.i  _generic_packet_math.h.i  _global_functions.h.i  _math_functions.h.i  _math_functions_impl.h.i  _matrix.h.i  _permutation_matrix.h.i  _transpose.h.i  _triangular_matrix.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_a_v_x/: _math_functions.h.i  _packet_math.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_a_v_x512/: _math_functions.h.i  _packet_math.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_alti_vec/: _complex.h.i  _math_functions.h.i  _packet_math.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_default/: _generic_packet_math_functions.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_g_p_u/: _packet_math.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_m_s_a/: _math_functions.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_n_e_o_n/: _complex.h.i  _math_functions.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_s_s_e/: _complex.h.i  _math_functions.h.i  _packet_math.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_s_y_c_l/: _interop_headers.h.i
eigen/.hg/store/data/_eigen/src/_core/arch/_z_vector/: _math_functions.h.i
eigen/.hg/store/data/_eigen/src/_core/products/: _general_block_panel_kernel.h.i  _general_matrix_matrix.h.i  _selfadjoint_matrix_matrix.h.i  _triangular_matrix_matrix.h.i
eigen/.hg/store/data/_eigen/src/_core/util/: _blas_util.h.i  _disable_stupid_warnings.h.i  _forward_declarations.h.i  _macros.h.d  _meta.h.i  _static_assert.h.i  _xpr_helper.h.i
eigen/.hg/store/data/_eigen/src/_geometry/: _transform.h.i  _umeyama.h.i
eigen/.hg/store/data/_eigen/src/_pardiso_support/: _pardiso_support.h.i
eigen/.hg/store/data/_eigen/src/_sparse_core/: _sparse_cwise_binary_op.h.i  _sparse_matrix.h.i
eigen/.hg/store/data/_eigen/src/_sparse_l_u/: _sparse_l_u.h.i
eigen/.hg/store/data/blas/: level3__impl.h.i
eigen/.hg/store/data/test/: _c_make_lists.txt.i  main.h.i  packetmath.cpp.i  product__mmtr.cpp.i  product__symm.cpp.i  triangular.cpp.i
eigen/.hg/store/data/unsupported/_eigen/_c_x_x11/: _tensor.i  _thread_pool.i
eigen/.hg/store/data/unsupported/_eigen/_c_x_x11/src/_tensor/: _tensor_block_v2.h.i  _tensor_broadcasting.h.i  _tensor_chipping.h.i  _tensor_contraction.h.i  _tensor_contraction_thread_pool.h.i  _tensor_conversion.h.i  _tensor_device_gpu.h.i  _tensor_device_sycl.h.i  _tensor_eval_to.h.i  _tensor_evaluator.h.i  _tensor_executor.h.i  _tensor_forced_eval.h.i  _tensor_generator.h.i  _tensor_index_list.h.i  _tensor_int_div.h.i  _tensor_layout_swap.h.i  _tensor_morphing.h.i  _tensor_padding.h.i  _tensor_reduction.h.i  _tensor_reduction_gpu.h.i  _tensor_reverse.h.i  _tensor_scan.h.i
eigen/.hg/store/data/unsupported/_eigen/_c_x_x11/src/_thread_pool/: _non_blocking_thread_pool.h.i
eigen/.hg/store/data/unsupported/_eigen/src/_matrix_functions/: _matrix_exponential.h.i
eigen/.hg/store/data/unsupported/_eigen/src/_special_functions/: _special_functions_impl.h.i  _special_functions_packet_math.h.i
eigen/.hg/store/data/unsupported/test/: _c_make_lists.txt.i  cxx11__tensor__block__eval.cpp.i  cxx11__tensor__executor.cpp.i  cxx11__tensor__morphing.cpp.i  cxx11__tensor__thread__pool.cpp.i
src/: boost_thrust_odeint.cu  hip_classes.cu  hip_classes_crtp.cu  hip_eigen.cu  rkf45.cu  rkf45.h  thrust_abstract_class.cu  thrust_bounding_box.cu  thrust_stateful_functor.cu
